--- a/ELBF20250324.AppWebMVC/Views/Shared/_Layout.cshtml
+++ b/ELBF20250324.AppWebMVC/Views/Shared/_Layout.cshtml
@@ -25,6 +25,13 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Usuarios</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Login">Login</a>
+                        </li>
                     </ul>
                 </div>
             </div>
